[package]
name = "assignment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scheduled-thread-pool = "0.2.7"
rand = "0.8.5"
crossbeam-channel = "0.5.11"
chrono = "0.4.35"
get_user_input = "0.1.1"
amiquip = "0.4.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
colored = "2.1.0"
bma-benchmark = "0.0.24"